--- a/Portafolio-Web/index.html
+++ b/Portafolio-Web/index.html
@@ -11,29 +11,48 @@
 <body class="body">
     <div class="container">
         <header class="header">
-            <nav class="navbar">
-                <section class="logo">
-                    <img src="./assets/images/logo Pandamigo.png" alt="Logo Personal de Edwin Juarez">
-                </section>
-                <ul class="menu-navbar">
-                    <li><a href="#">About me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <section class="logo">
+                        <img src="./assets/images/logo Pandamigo.png" alt="Logo Personal de Edwin Juarez">
+                    </section>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-disabled="page" href="#">Contact</a>
+                        </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark" type="submit">Search</button>
+                        </form>
+                    </div>
+                    </div>
+                </nav>
         </header>
         <main class="main-content">
             <section class="bio">
                 <h1>Soy Edwin Juarez</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum dolores autem quia dolorem sit, repellendus officia? Ullam fugiat suscipit quos, pariatur, totam saepe unde nam delectus ut ducimus in beatae!</p>
-                <a href="#"><button type="button" class="btn btn-success">Descargar CV</button></a>
+                <a href="#"><button type="button" class="btn btn-success">Descargar CV <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
+                    <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1m-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0"/>
+                </svg></button></a>
             </section>
             <section class="img-container">
                 <img src="./assets/images/Perfil.jpg" alt="Imagen Personal de Edwin Juarez">
             </section>
         </main>
-        <section class="projects-container m-5">
-            <section class="projects-header m-5">
+        <section class="projects-container mb-1">
+            <section class="projects-header mb-1">
                 <h2 class="text-center">My Projects</h2>
             </section>
                 <section class="projects-box">
@@ -47,10 +66,30 @@
 
                         </section>
                         <section class="card-title">
-                            <h1>Hola Mundo</h1>
+                            <h1>Barberia HTML</h1>
                         </section>
                         <section class="card-links">
-                            <a href="#">Gitgub</a>
+                            <a href="https://github.com/pandamigo182/barberia-practicahtml.git">Gitgub <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                            </svg></a>
+                            <a href="#">Demo</a>
+                        </section>
+                        </article>
+                    <!-- Agregar una carta por proyecto -->
+                        <article class="card col-3">
+                        <section>
+                            <img class="card-img-top" src="https://sergiosanz.dev/static/b0ad08bfda05fba464bf2927db87772d/6df68/html-css.png" alt="Picture of the Project">
+                        </section>
+                        <section class="card-body">
+
+                        </section>
+                        <section class="card-title">
+                            <h1>Projectos Bootcamp-FSJ25</h1>
+                        </section>
+                        <section class="card-links">
+                            <a href="https://github.com/pandamigo182/Bootcamp-FSJ25.git">Gitgub <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                            </svg></a>
                             <a href="#">Demo</a>
                         </section>
                         </article>
@@ -66,23 +105,9 @@
                             <h1>Hola Mundo</h1>
                         </section>
                         <section class="card-links">
-                            <a href="#">Gitgub</a>
-                            <a href="#">Demo</a>
-                        </section>
-                        </article>
-                    <!-- Agregar una carta por proyecto -->
-                        <article class="card col-3">
-                        <section>
-                            <img class="card-img-top" src="https://sergiosanz.dev/static/b0ad08bfda05fba464bf2927db87772d/6df68/html-css.png" alt="Picture of the Project">
-                        </section>
-                        <section class="card-body">
-
-                        </section>
-                        <section class="card-title">
-                            <h1>Hola Mundo</h1>
-                        </section>
-                        <section class="card-links">
-                            <a href="#">Gitgub</a>
+                            <a href="#">Gitgub <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                            </svg></a>
                             <a href="#">Demo</a>
                         </section>
                         </article>
@@ -91,7 +116,7 @@
         </section>
 
         <section class="contact-form d-flex justify-content-center m-5">
-            <form action="#" class="card col-6 bg-light">
+            <form action="#" class="card-surbey col-6 bg-light">
                 <section class="form-floating m-3">
                     <input type="text" class="form-control" id="floatingInput" placeholder="Nombre o Razon Social">
                     <label for="floatingInput" class="text-black">Nombre</label>
@@ -115,9 +140,12 @@
                 <h5 class="text-center">Frontend Developer</h5>
             </section>
             <section class="social-networks d-flex justify-content-center">
-                <a href="#">Linkedin</a>
-                <a href="#">GitHub</a>
-                <a href="#">YouTube</a>                
+                <a href="https://www.linkedin.com/in/edwinjuarez/">Linkedin <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                </svg></a>
+                <a href="https://github.com/pandamigo182">GitHub <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                </svg></a>                              
             </section>
         </footer>
 
