--- a/Tarea-LandingPage/index.html
+++ b/Tarea-LandingPage/index.html
@@ -7,8 +7,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>Tienda Online de Almacenes SIMAN El Salvador</title>
+    
 </head>
-<body>
-    <header></header>
+<body class="body">
+    <header>
+    <div class="container">
+        <header class="header">
+            <nav class="navbar">
+                <section class="logo">
+                    <img src="./assets/images/logo-SIMAN.svg" alt="Logo de Almacenes SIMAN">
+                </section>
+                <ul class="menu-navbar">
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="./assets/images/envio-gratis.gif" alt="">
+        </header>
+    </div>
+
+    <footer class="footer-section">
+        <section class="footer-content">
+            <h2 class="text-center">Edwin Juarez Copyrigth since 2024</h2>
+            <h5 class="text-center">Frontend Developer</h5>
+        </section>
+    </footer>
 </body>
+
+
 </html>
