--- a/Portafolio-Web/index.html
+++ b/Portafolio-Web/index.html
@@ -115,23 +115,25 @@
                 </section>             
         </section>
 
-        <section class="contact-form d-flex justify-content-center m-5">
-            <form action="#" class="card-surbey col-6 bg-light">
-                <section class="form-floating m-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="Nombre o Razon Social">
-                    <label for="floatingInput" class="text-black">Nombre</label>
-                </section>
-                <section class="form-floating m-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="Escriba su emial">   
-                    <label for="floatingInput" class="text-black">Correo Electronico</label>                 
-                </section>
+        <section class="container-form">
+            <h4 class="text-center">Formulario de Contacto</h4>        
+            <section class="contact-form d-flex justify-content-center m-2">
+                <form action="#" class="card-surbey col-11 bg-light">                
+                    <section class="form-floating m-3">                    
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Nombre o Razon Social">
+                        <label for="floatingInput" class="text-black">Nombre</label>
+                    </section>
+                    <section class="form-floating m-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="Escriba su emial">   
+                        <label for="floatingInput" class="text-black">Correo Electronico</label>                 
+                    </section>
                 <section class="form-floating m-3">
                     <textarea class="form-control" placeholder="Deja el comentario aqui" id="floatingTextarea"></textarea>
                     <label for="floatingTextarea" class="text-black">Comentarios</label>                                     
-                </section>
-            
+                </section>            
                 <a href="#" class="btn btn-primary m-3">Send</a>
-            </form>
+                </form>
+            </section>
         </section>
 
         <footer class="footer-section">
