--- a/Tarea-LandingPage/index.html
+++ b/Tarea-LandingPage/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/popup.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     //bootstrap
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     //JS bootstrap
@@ -122,8 +122,7 @@
                                     <img alt="" src="./assets/images/t-shart.jpg">
                                     <div class="s_overlay"></div>
                                     <h2>SALE!</h2>
-                                    <h3>Camisetas</h3>
-                                    <h4><i aria-hidden="true" class="fa fa-cart-arrow-down"></i>Comprar</h4>
+                                    <h3>Camisetas</h3>                                    
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
@@ -139,8 +138,8 @@
                                 <div class="s_product">
                                     <img alt="" src="./assets/images/t-shart1.jpg">
                                     <div class="s_overlay"></div>
-                                    <h3>T-SHIRT</h3>
-                                    <h4><i aria-hidden="true" class="fa fa-cart-arrow-down"></i>ADD TO CART</h4>
+                                    <h2>Ultimos Dias</h2>
+                                    <h3>T-SHIRT</h3>                                    
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
@@ -156,13 +155,13 @@
                                 <div class="s_product">
                                     <img alt="" src="./assets/images/t-shart2.jpg">
                                     <div class="s_overlay"></div>
-                                    <h3>T-SHIRT</h3>
-                                    <h4><i aria-hidden="true" class="fa fa-cart-arrow-down"></i>ADD TO CART</h4>
+                                    <h2>Nuevo Ingreso</h2>
+                                    <h3>T-SHIRT</h3>                                    
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="rate">
-                                            <h3>Pocket Tee</h3>
+                                            <h3>Blusa Sin Mangas</h3>
                                             <p><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i></p>
                                             <h5>$250</h5>
                                         </div>
@@ -173,9 +172,8 @@
                                 <div class="s_product">
                                     <img alt="" src="./assets/images/t-shart3.jpg">
                                     <div class="s_overlay"></div>
-                                    <h2>NEW!</h2>
-                                    <h3>JACKET</h3>
-                                    <h4><i aria-hidden="true" class="fa fa-cart-arrow-down"></i>ADD TO CART</h4>
+                                    <h2>Nuevo Ingreso</h2>
+                                    <h3>Chaqueta</h3>                                    
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
@@ -344,7 +342,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="bar">
-                            <h2>BEST SELLERS</h2>
+                            <h2>MAS COTIZADOS</h2>
                             <img alt="" src="./assets/images/bar.jpg">
                         </div>
                     </div>
@@ -365,7 +363,6 @@
                                                 <h3>Pocket Tee</h3>
                                                 <p><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><span><i aria-hidden="true" class="fa fa-star"></i></span></p>
                                                 <h5>$250</h5>
-                                                <p class="cart">ADD TO CART</p>
                                         </div>
                                     </div>
                                 </div>
@@ -382,7 +379,6 @@
                                                 <h3>Pocket Tee</h3>
                                                 <p><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><span><i aria-hidden="true" class="fa fa-star"></i></span></p>
                                                 <h5>$250</h5>
-                                                <p class="cart">ADD TO CART</p>
                                         </div>
                                     </div>
                                 </div>
@@ -399,55 +395,28 @@
                                                 <h3>Pocket Tee</h3>
                                                 <p><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><span><i aria-hidden="true" class="fa fa-star"></i></span></p>
                                                 <h5>$250</h5>
-                                                <p class="cart">ADD TO CART</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4"></div>
+                                <div class="best-sell-part">
+                                    <img src="./assets/images/best-sell-img2.jpg" alt="">
+                                    <p><i class="fa fa-heart" aria-hidden="true"></i></p>
+                                    <h4>QUICK VIEW</h4>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="prodact-s-text">
+                                                <h3>Pocket Tee</h3>
+                                                <p><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><i aria-hidden="true" class="fa fa-star"></i><span><i aria-hidden="true" class="fa fa-star"></i></span></p>
+                                                <h5>$250</h5>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                        <div class="col-md-5">
-                            <div class="winter-cloth">
-                            <div class="big-cloth">
-                                <img src="./assets/images/big-cloth.jpg" alt="">
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="s-cloth">
-                                        <img src="./assets/images/s-cloth.jpg" alt="">
-                                    </div>
-                                    <div class="s-cloth">
-                                        <img src="./assets/images/s-cloth.jpg" alt="">
-                                    </div>
-                                    <div class="s-cloth">
-                                        <img src="./assets/images/s-cloth.jpg" alt="">
-                                    </div>
-                                    <div class="s-cloth">
-                                        <img src="./assets/images/s-cloth.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="w_text">
-                                        <h4>LOREM IPSU, DOLOR SITE EMIT</h4>
-                                        <h5>Lorem</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="dollar">
-                                        <p>&#36;399.99</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="option">
-                                        <button>SELECT OPTION</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    </div>                        
                     </div>
                 </div>
                 </div>
@@ -459,7 +428,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="bar">
-                            <h2>BRANDS WE STOCK</h2>
+                            <h2>MEJORES MARCAS</h2>
                             <img src="./assets/images/bar.jpg" alt="">
                         </div>
                     </div>
@@ -468,7 +437,7 @@
             </div>
         </section>
             <section class="yyyy">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                     <div class="col-md-12">
                         <div class="slider-container">
@@ -528,7 +497,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="f-images-text-two">
-                                <h2>Top Rated</h2>
+                                <h2>Mejor Valorados</h2>
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="img-text">
@@ -569,7 +538,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="f-images-text">
-                                <h2>Featured</h2>
+                                <h2>Ofertas</h2>
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="img-text">
@@ -611,7 +580,7 @@
             
             <section class="fashion">
             <div class="f-overlay"></div>
-            <img src="img/footer-top-images.jpg" alt="">
+            <img src="./assets/images/footer-top-images.jpg" alt="MUJER MIRANDO AL HORIZONTE">
                 <h2>LO MÁS NUEVO</h2>
             </section>    
 
